# Vulcan_MES

./: .env.backend.example  .env.example  .env.frontend.example  .env.shared.example  .envrc  .envrc.local.example  .gitignore  CLAUDE.md  MIGRATION_COMPLETE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json
apps/backend/: .dockerignore  API_ENDPOINTS_SUMMARY.md  DATABASE_TESTING.md  DOMAIN.md  Dockerfile  Dockerfile.prod  ERROR_HANDLING_RESILIENCE_IMPLEMENTATION.md  OBSERVABILITY.md  PRODUCTION_SECURITY_AUDIT.md  RBAC_SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SQLMODEL_IMPLEMENTATION.md  SUPABASE_SETUP.md  TECH_DEBT_AUDIT.md  TESTING.md  TEST_SUITE_SUMMARY.md  pyproject.toml  test_cors.py
apps/backend/app/: main.py  main_enhanced.py  main_secure.py  models.py  utils.py
apps/backend/app/alembic/versions/: 1100bef7c15b_merge_multiple_heads.py  7c83a9ac8497_add_task_modes_table.py  add_task_mode_resource_requirements.py  create_task_skill_requirements_table.py  f1a2b3c4d5e6_add_task_templates_table.py
apps/backend/app/api/: main.py  websocket_client.py  websockets.py  websockets_scheduling.py
apps/backend/app/api/docs/: __init__.py
apps/backend/app/api/routes/: admin_rbac.py  holiday_calendar.py  jobs.py  mfa.py  monitoring.py  status.py  task_modes.py  users.py  utils.py
apps/backend/app/api/websockets/: realtime.py
apps/backend/app/application/dtos/: __init__.py  job_dtos.py  scheduling_dtos.py
apps/backend/app/application/queries/: __init__.py  analytics_queries.py  base_query.py  dashboard_queries.py
apps/backend/app/application/scheduling/: __init__.py
apps/backend/app/application/services/: base_service.py  job_service.py
apps/backend/app/application/validation/: validators.py
apps/backend/app/core/: cache.py  celery_app.py  circuit_breaker.py  config.py  data_filtering.py  database.py  db.py  db_health.py  db_test.py  development.py  fallback_strategies.py  health.py  mfa.py  monitoring.py  performance.py  rsa_keys.py  secret_rotation.py  security.py  security_enhanced.py  solver_management.py  solver_optimization.py  supabase.py  validation.py
apps/backend/app/core/tasks/: CLAUDE.md  maintenance.py  optimization.py  reporting.py  scheduling.py
apps/backend/app/domain/: __init__.py
apps/backend/app/domain/scheduling/: __init__.py
apps/backend/app/domain/scheduling/entities/: job.py  machine.py  operator.py  schedule.py  task.py
apps/backend/app/domain/scheduling/events/: domain_events.py
apps/backend/app/domain/scheduling/read_models/: machine_utilization.py
apps/backend/app/domain/scheduling/repositories/: job_repository.py  machine_repository.py  task_repository.py
apps/backend/app/domain/scheduling/services/: optimization_service_enhanced.py  resource_allocation_service.py
apps/backend/app/domain/scheduling/value_objects/: constraints.py  duration.py  machine_option.py  role_requirement.py  time.py  timeslot.py
apps/backend/app/domain/shared/: exceptions.py
apps/backend/app/infrastructure/: __init__.py
apps/backend/app/infrastructure/adapters/: __init__.py
apps/backend/app/infrastructure/cache/: multi_level_cache.py
apps/backend/app/infrastructure/database/: __init__.py  domain_unit_of_work.py  models.py  schema.sql  sqlmodel_entities.py  unit_of_work.py
apps/backend/app/infrastructure/database/repositories/: __init__.py  base.py  job_repository.py  resource_repository.py  schedule_repository.py  task_template_repository.py
apps/backend/app/infrastructure/database/repositories/mappers/: __init__.py  job_mapper.py
apps/backend/app/infrastructure/events/: __init__.py
apps/backend/app/middleware/: authorization.py  validation.py
apps/backend/app/models/: __init__.py
apps/backend/app/models/scheduling/: __init__.py  job.py  operation.py  operator.py  production_zone.py  skill.py  task.py
apps/backend/app/scheduling/: __init__.py
apps/backend/app/scheduling/models/: __init__.py
apps/backend/app/scheduling/solvers/: __init__.py
apps/backend/app/services/: admin_data_service.py  vulcan_scheduling_service.py
apps/backend/app/tests/: conftest.py  conftest_comprehensive.py  conftest_containers.py  conftest_enhanced.py  test_rbac_security.py
apps/backend/app/tests/api/: test_solve_endpoint.py
apps/backend/app/tests/api/routes/: test_scheduling_endpoints_comprehensive.py  test_utils.py
apps/backend/app/tests/database/: factories.py  factories_enhanced.py  test_connectivity.py  test_error_handling.py  test_models.py  test_utils.py
apps/backend/app/tests/domain/: test_repository_validation.py
apps/backend/app/tests/domain/entities/: test_task.py
apps/backend/app/tests/domain/scheduling/: fixtures.py  test_domain_event_integration.py  test_domain_events.py  test_event_handlers.py  test_value_objects_duration.py  test_value_objects_time_window.py
apps/backend/app/tests/domain/scheduling/events/: __init__.py  test_domain_events.py
apps/backend/app/tests/domain/value_objects/: test_common.py
apps/backend/app/tests/e2e/: README.md  conftest_e2e.py  test_error_recovery_workflow_e2e.py  test_multi_user_workflow_e2e.py  test_security_integration_e2e.py
apps/backend/app/tests/integration/: test_data_integrity.py  test_job_repository_integration.py  test_schedule_repository_integration.py
apps/backend/app/tests/property_based/: test_domain_entities.py
apps/backend/app/tests/security/: test_api_security_comprehensive.py  test_comprehensive_security.py  test_security_comprehensive.py  test_security_vulnerabilities.py
apps/backend/app/tests/utils/: test_scenarios.py
apps/backend/app/utils/: __init__.py
apps/backend/docs/: API_REFERENCE.md  CODE_EXAMPLES.md  DEVELOPER_GUIDE.md  OPERATIONS_GUIDE.md  QUEUE_AND_SCHEDULER_AUDIT.md  RESULT_SCHEMA.sql
apps/backend/scripts/: backup_restore.sh  init_db.sh  lint.sh  run-comprehensive-tests.sh  run-db-tests.sh  run-e2e-tests.sh  tests-start.sh
apps/backend/tests/load/: locustfile.py
(+452 files in other folders)
